# evil-udp

./: Cargo.toml  amplifiers.json  bedrock.py  ntp.json  ntp_client.py  test_ntp.json
src/: main.rs  test.rs  udp.rs
src/adapters/: dns.rs  mod.rs  ntp.rs
src/lib/: mod.rs
src/lib/protocols/: dns.rs  mod.rs  ntp.rs
