[package]
name = "evil-udp"
version = "0.1.0"
edition = "2021"
description = "UDP放大攻击器"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rawsock = "0.3"
etherparse = "0.10"
clap = "3.1"
colorful = "0.2"
ctrlc = "3.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
crossbeam = "0.8"
num_cpus = "1.13"
default-net = "0.10"
rand = "0.8"
chrono = "0.4"

[patch.crates-io]
rawsock = { git = "https://github.com/lihe07/rust-rawsock" }