[package]
name = "evil_udp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
enum_dispatch = "0.3.12"
futures = "0.3.30"
log = "0.4.20"
pnet = "0.34.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
smol = "2.0.0"
